force-app/main/default/objects/AccountProfile__c/AccountProfile__c.object-meta.xml
<CustomObject>
    <label>Account Profile</label>
    <nameField>
        <displayFormat>G{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>