force-app/main/default/objects/AccountProfile__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Company name if captured in the online profile</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>