force-app/main/default/objects/AccountProfile__c/fields/CountryLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>CountryLanguageCode__c</fullName>
    <description>Language code associated with the online profile</description>
    <label>Country Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>