force-app/main/default/objects/AccountProfile__c/fields/ExternalIdGUID__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdGUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExternalIdGUID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>