force-app/main/default/objects/AccountProfile__c/fields/FriendlyName__c.field-meta.xml
<CustomField>
    <fullName>FriendlyName__c</fullName>
    <description>Customer nickname if captured in the online profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Friendly Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>