force-app/main/default/objects/AccountProfile__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <description>GUID(PROFILE ID) that represents a User Account in the B2C applications</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Profile Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>