force-app/main/default/objects/AccountProfile__c/fields/LastLoginDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastLoginDateTime__c</fullName>
    <description>Timestamp of last login in the online profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Login DateTime</label>
    <type>DateTime</type>
</CustomField>