force-app/main/default/objects/AccountProfile__c/fields/LastRegistrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastRegistrationDateTime__c</fullName>
    <description>Timestamp of latest registration</description>
    <label>Last Registration DateTime</label>
    <type>DateTime</type>
</CustomField>