force-app/main/default/objects/AccountProfile__c/fields/LastUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDateTime__c</fullName>
    <description>Timestamp for last profile update</description>
    <label>Last Update DateTime</label>
    <type>DateTime</type>
</CustomField>