force-app/main/default/objects/AccountProfile__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <description>Member Id associated with the Online Profile</description>
    <label>Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>