force-app/main/default/objects/AccountProfile__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>Customer middle name as captured in the online profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>