force-app/main/default/objects/AccountProfile__c/fields/SCAID__c.field-meta.xml
<CustomField>
    <fullName>SCAID__c</fullName>
    <formula>Account__r.SCAID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCAID</label>
    <type>Text</type>
</CustomField>