force-app/main/default/objects/AccountProfile__c/fields/SecondLastName__c.field-meta.xml
<CustomField>
    <fullName>SecondLastName__c</fullName>
    <description>Customer second_last_name as captured in the online profile</description>
    <label>Second LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>