force-app/main/default/objects/AccountProfile__c/fields/SourceCode__c.field-meta.xml
<CustomField>
    <fullName>SourceCode__c</fullName>
    <label>Source Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>