force-app/main/default/objects/AccountProfile__c/fields/SourceCodeDescr__c.field-meta.xml
<CustomField>
    <fullName>SourceCodeDescr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Code Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>