force-app/main/default/objects/AccountProfile__c/fields/UserTypeCode__c.field-meta.xml
<CustomField>
    <fullName>UserTypeCode__c</fullName>
    <label>UserTypeCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>